--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -14,8 +14,8 @@ nl:
       main_title: "Wat wil je vandaag doen?"
       social_title: "Ontmoet andere Blenders"
       work_title: "Ondersteun een nieuwkomer richting werk"
-      work_title_newcomer: "Vraag een Netwerkverbinding aan - Binnenkort!"
-      donate_title: "Support stichting Blendin"
+      work_title_newcomer: "Vraag een Netwerkverbinding aan"
+      donate_title: "Support Stichting Blendin"
       events_card_title: "Agenda"
       events_card_subtitle: "Kom naar unieke evenementen en ontmoet Blenders die geïnteresseerd zijn in een hechte Blendin community."
       talent_teach_card_title: "Deel Talenten"
@@ -26,23 +26,25 @@ nl:
       donate_card_subtitle: "Elke donatie helpt direct om Blendin’s impact te vergroten en onze community uit te bouwen. Op deze manier kunnen we veel meer kansen creëren voor zowel nieuwkomers als locals."
       network_card_title: "Doneer Je Netwerk"
       network_card_subtitle: "Veel nieuwkomers willen graag aan de slag, maar missen vaak het netwerk om werk te vinden. Jouw professionele netwerk kan voor een nieuwkomer het verschil maken richting een passende baan of stage."
-      network_card_title_newcomer: "Something in dutch"
-      network_card_subtitle_newcomer: "Something in dutch"
+      network_newcomer_card_title: "Request Je Netwerk"
+      network_newcomer_card_subtitle: "Request a network"
       partner_card_title: "Wordt Partner"
       partner_card_subtitle: "Wil jouw bedrijf meer doen om de Blendin-community te ondersteunen? Wij staan altijd open voor nieuwe samenwerkingen."
+      coffe_card_title: "Bakkie doen"
+      coffe_card_subtitle: "Ontmoet een nieuwkomer/local met dezelfde interesses in een café gedurende ongeveer 1 uur."
   footer:
-    about: "About Blendin"
+    about: "Over Blendin"
     team: "Ons team"
     mission: "Mission Statement"
     news: "Nieuws"
-    gallery: "Gallery"
+    gallery: "Gallerij"
     work: "Hoe het werkt"
     donate: "Doneren"
     support: "Support"
-    contact: "Contact Us"
+    contact: "Contact"
     privacy: "Privacy Policy & Terms of Use"
-    involvement: "Involvement"
-    meet: "Events"
+    involvement: "Doe mee"
+    meet: "Agenda"
     teach: "Deel Talenten"
     share: "DoneerJeNetwerk"
     partner: "Become A Partner"
@@ -55,8 +57,16 @@ nl:
       cta: "Doneer nu!"
     partner:
       title: "Become a partner"
-      lead: "Wij waarderen jouw interesse een samenwerkingspartner te worden. Samen kunnen we nieuwkomers welkom heten in onze samenleving, en met hen de aspecten delen die dit land een schatrijke thuisbasis maken. Doe mee, en creëer een vereende wereld."
+      lead: "Wij waarderen jouw interesse om een samenwerkingspartner te worden. Samen kunnen we nieuwkomers welkom heten in onze samenleving, en met hen de aspecten delen die dit land een schatrijke thuisbasis maken. Doe mee, en creëer een vereende wereld."
+    coffe:
+      title: "Bakkie doen"
+      lead: "Ontmoet een nieuwkomer/local met dezelfde interesses in een café gedurende ongeveer 1 uur. Leer elkaar kennen en spreek Nederlands met elkaar. Dat is wat wij “Bakkie doen” noemen."
+    request_network:
+      title: "Request network"
+      lead: "Request network Lead"
   talents:
+    all:
+      title: "Page title"
     index:
       title: "Share your talent on Blendin"
       subtitle: "This is a modified jumbotron that occupies the entire horizontal space of its parent."
@@ -109,7 +119,7 @@ nl:
         about_helper: "(Dit is niet verplicht, maar helpt je bij het vinden van nieuwe contacten.)"
         submit_btn: "Bevestig"
     end_submit:
-      thank_you_message: "Heel erg bedankt voor je aanmelding! Onze pilot gaat nu van start. <br /><br /> We nemen binnen 5 werkdagen contact met je op om te laten weten of je binnen de pilotfase valt.<br /><br /> Hou je mail daarom goed in de gaten! "
+      thank_you_message: "Hartelijk bedankt voor je aanmelding! Onze pilot gaat nu van start. <br /><br /> We nemen binnen 5 werkdagen contact met je op om te laten weten of je binnen de pilotfase valt.<br /><br /> Hou je mail daarom goed in de gaten! "
   home:
     index:
       no_match_msg_htm: "We hebben geen passende match gevonden voor jou<br>We zijn momenteel slechts actief in Nederland. Ben je geintereseerd om Blendin te beginnen in jouw land? Stuur ons dan een bericht."
@@ -149,27 +159,26 @@ nl:
       gender_label: "Selecteer een optie"
       gender_male: "Ik ben een man"
       gender_female: "Ik ben een vrouw"
-      birthday_label: "Geboorte datum"
+      birthday_label: "Geboortedatum"
       address_label: "Waar woon je?"
       address_placeholder: "Bijv. Amsterdam"
       country_label: "Land van herkomst"
       country_placeholder: "Bijv. Syrie"
       interest_label: "Kies jouw interesses uit deze lijst"
       interest_helper: "(Kies minstens 3 interesses. Hoe meer hoe beter! )"
-      job_label: "Studie en/of werk ervaring"
+      job_label: "Studie- en/of werkervaring"
       job_placeholder: "Bijv. auto monteur of advocaat"
       job_helper: "(Dit kan dus ook een baan van vroeger zijn.)"
-      phone_label: "Telefoon nummer"
+      phone_label: "Telefoonnummer"
       phone_placeholder: "Bijv. 0612345678"
       about_label: "Vertel meer over jezelf 💬"
       about_helper: "Dit is niet verplicht, maar helpt je bij het vinden van nieuwe contacten."
-      phone_helper: "Dit nummer is pas zichtbaar voor andere gebruikers als je blend verzoek geaccepteerd wordt of jij je verzoek accepteerd."
+      phone_helper: "We zullen nooit uw gegevens delen met andere."
       submit_btn: "Bevestig en ga door"
       introjs_step_1_html: data-intro="Kies op ‘Local’ als je je thuis voelt in Nederland en op zoek bent naar contact met mensen die nieuw zijn in Nederland."
       introjs_step_2_html: data-intro="Kies hier ‘nieuwkomer’ als je niet opgegroeid bent in Nederland en op zoek ben naar contact met Nederlanders."
       introjs_step_3_html: data-intro="Geef hier zo veel mogelijk interesses aan! Ons systeem zal daarop matches selecteren."
       introjs_step_4: "Bevestigen"
-    community_form:
       info: "Lorem ipsum dolorem sit amet."
       local_label: "Selecteer een optie"
       im_local: "Ik ben een local"
@@ -179,10 +188,10 @@ nl:
       photo: "Foto"
       settings: "Instellingen"
     photo_form:
-      label: "Upload/verander jouw foto:"
+      label: "Upload een foto van jouw computer of telefoon"
       btn_upload: "Next"
       error: "Bestand niet ondersteund! Upload een van de volgende bestandformaties: png, jpeg, jpg."
-      info: "Clear frontal face photos are an important way for the community and guests to learn about each other. It’s not much fun to host a landscape! Be sure to use a photo that clearly shows your face and doesn’t include any personal or sensitive info you’d rather not have hosts or guests see."
+      info: ""
   layouts:
     mailer:
       footer: "Verstuurd door"
@@ -500,4 +509,4 @@ nl:
       attend_btn: "Aanwezig dit Event"
       open_event_message: "Deze evenementen zijn voor iedereen.<br> Een kaartje kan in sommige gevallen nodig zijn."
       attend_small_group_message: "Bedankt voor je interesse in dit evenement, Als je toch niet meer kan, klik dan op de knop “Afwezig” om je RSVP te veranderen, zodat een andere Blender kan deelnemen."
-      whatsapp_message: "Ledereen die aanwezig wilt zijn zullen we toevoegen in een WhatsApp groep."
+      whatsapp_message: "ledereen die aanwezig wilt zijn zullen we toevoegen in een WhatsApp groep."
